apps/base/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    k8s.dimarco-server.site/scrape: "true"
    goldilocks.fairwinds.com/enabled: "true"
